# ESP32S3SmartCalendar

./: .gitignore  CMakeLists.txt  README.md  connect.cpp  connect.hpp  idf_component.yml  sdkconfig
components/arduino/: platform.txt
components/fonts/: CMakeLists.txt  myfont.c  weather.c
docs/: Library_Mateusz.Kowalec.lbr  SmartCalendar_Mateusz.Kowalec.brd  SmartCalendar_Mateusz.Kowalec.sch
main/: CMakeLists.txt  adc.cpp  adc.hpp  connect.cpp  connect.hpp  dbgprint.h  defines.h  fram.cpp  fram.hpp  main.cpp  structs.hpp  sync.cpp  sync.hpp  time.cpp  time.hpp  tokens.cpp  tokens.hpp
